# habit

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  db.rs  delete.rs  edit.rs  engine.rs  habit.rs  lib.rs  list.rs  log.rs  main.rs  new.rs  prompt.rs  show.rs  tui.rs  utils.rs
src/delete/: cli.rs  engine.rs
src/edit/: cli.rs  engine.rs
src/list/: cli.rs  engine.rs
src/log/: cli.rs  engine.rs
src/new/: cli.rs  engine.rs
src/show/: cli.rs  engine.rs  ui.rs  viz.rs
src/show/viz/: bowl_of_marbles.rs  heatmap.rs
