[package]
name = "habit"
version = "0.1.0"
edition = "2021"
authors = ["Yann Salmon"]
description = "A command-line habit tracker"
readme = "README.md"
repository = "https://github.com/yanns1/habit"
license = "GPL-3.0"
keyworks = ["habit", "habit-tracker"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
dialoguer = "0.11.0"
lazy_static = "1.5.0"
regex = "1.10.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
