[package]
name = "habit"
version = "0.1.0"
edition = "2021"
authors = ["Yann Salmon"]
description = "A command-line habit tracker"
readme = "README.md"
repository = "https://github.com/yanns1/habit"
license = "GPL-3.0"
keyworks = ["habit", "habit-tracker"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
dialoguer = "0.11.0"
directories = "5.0.1"
lazy_static = "1.5.0"
regex = "1.10.5"
# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
rusqlite = { version = "0.31.0", features = ["bundled"] }
